# pokedex

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  UAT-REPORT.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 202405030001_initial.py  fca3c3721fe3_add_genus_column_to_pokemon.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  error_handler.py  rate_limiter.py
backend/app/api/routes/: analyze.py  health.py  pokemon.py
backend/app/data/: pokemon_seed.json
backend/app/models/: __init__.py  analysis.py  api_models.py  db.py  pokemon.py
backend/app/repositories/: pokedex_repository.py
backend/app/services/: __init__.py  image_processor.py  pokemon_matcher.py  validators.py
backend/app/utils/: http.py  logging.py  pokemon_images.py
backend/scripts/: README.md  precompute_embeddings.py  seed_pokemon_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_analyze.py  test_analyze_pgvector.py  test_pokemon.py
backend/tests/unit/: test_health.py  test_pokedex_repository.py  test_pokemon_images.py
docs/: README.md  api-documentation.md  deployment-guide.md  development-setup.md  pokemon-vision-implementation-plan.md  pokemon-vision-spec.md
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
(+66 files in other folders)
